--- a/FindDistance/requirements.txt
+++ b/FindDistance/requirements.txt
@@ -1,124 +1,307 @@
 absl-py==2.1.0
+accelerate==1.1.1
+aiohappyeyeballs==2.4.4
+aiohttp==3.8.6
+aiosignal==1.3.1
+aiosqlite==0.20.0
+akshare==1.15.50
+alembic==1.14.1
+alpaca-py==0.34.0
 altair==5.5.0
 altgraph==0.17.4
+annotated-types==0.6.0
+anyio==4.0.0
+apache-airflow==2.10.4
+apache-airflow-providers-common-compat==1.3.0
+apache-airflow-providers-common-io==1.5.0
+apache-airflow-providers-common-sql==1.15.0
+apache-airflow-providers-fab==1.5.2
+apache-airflow-providers-ftp==3.5.2
+apache-airflow-providers-http==4.5.2
+apache-airflow-providers-imap==3.3.2
+apache-airflow-providers-mysql==5.6.3
+apache-airflow-providers-smtp==1.9.0
+apache-airflow-providers-sqlite==3.4.3
+apispec==6.3.0
+argcomplete==3.1.2
+asgiref==3.7.2
 asttokens==2.4.1
 astunparse==1.6.3
+async-timeout==4.0.3
 attrs==24.2.0
+Babel==2.13.0
+backoff==1.10.0
+bcrypt==4.2.1
 beautifulsoup4==4.12.3
+bitsandbytes==0.45.1
 blinker==1.9.0
+bokeh==2.4.3
+branca==0.8.1
+build==1.2.2.post1
+cachelib==0.9.0
 cachetools==5.5.0
+captcha==0.6.0
+cattrs==23.1.2
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.3.2
+chroma-hnswlib==0.7.6
+chromadb==0.6.3
 click==8.1.7
+clickclick==20.10.2
 cloudpickle==3.1.0
 colorama==0.4.6
+coloredlogs==15.0.1
+colorlog==6.9.0
 comm==0.2.2
+ConfigUpdater==3.1.1
+connexion==2.14.2
 contourpy==1.3.0
+cron_descriptor==1.4.0
+croniter==6.0.0
+cryptography==41.0.4
+cssselect==1.2.0
+cssutils==2.11.1
 cycler==0.12.1
 Cython==3.0.11
 dash==2.18.2
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
+dataclasses-json==0.6.7
+datasets==3.2.0
 debugpy==1.8.6
 decorator==5.1.1
+Deprecated==1.2.14
+dill==0.3.8
+diskcache==5.6.3
+distro==1.9.0
 dm-tree==0.1.8
+dnspython==2.4.2
+docutils==0.20.1
+durationpy==0.9
+email-validator==1.3.1
 et-xmlfile==1.1.0
 exceptiongroup==1.2.2
 executing==2.1.0
+extra-streamlit-components==0.1.71
+factor_analyzer==0.5.1
+fastapi==0.115.6
 fastjsonschema==2.20.0
 filelock==3.16.1
 Flask==3.0.3
+Flask-AppBuilder==4.5.2
+Flask-Babel==2.0.0
+Flask-Caching==2.0.2
+Flask-JWT-Extended==4.5.3
+Flask-Limiter==3.5.0
+Flask-Login==0.6.2
+Flask-Session==0.5.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.2.1
 flatbuffers==24.3.25
+folium==0.19.4
 fonttools==4.54.1
 frozendict==2.4.4
-fsspec==2024.10.0
+frozenlist==1.4.0
+fsspec==2024.9.0
 gast==0.4.0
+geopandas==1.0.1
 gitdb==4.0.11
 GitPython==3.1.43
 google-auth==2.36.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
+google-re2==1.1
+googleapis-common-protos==1.66.0
+graphviz==0.20.1
+greenlet==3.0.0
+groq==0.15.0
 grpcio==1.67.1
 gunicorn==23.0.0
 h11==0.14.0
 h5py==3.12.1
 html5lib==1.1
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
 huggingface-hub==0.26.2
+humanfriendly==10.0
 idna==3.10
+importlib-resources==6.1.0
 importlib_metadata==8.5.0
+inexactsearch==1.0.2
+inflection==0.5.1
 ipykernel==6.29.5
 ipython==8.27.0
 ipywidgets==8.1.5
 itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.3
+jmespath==1.0.1
 joblib==1.4.2
+jsonpatch==1.33
+jsonpath==0.82.2
+jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 jupyterlab_widgets==3.0.13
+kagglehub==0.3.4
 keras==3.6.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.4.7
+kubernetes==31.0.0
+langchain==0.3.16
+langchain-community==0.3.9
+langchain-core==0.3.32
+langchain-groq==0.2.3
+langchain-text-splitters==0.3.5
+langsmith==0.1.147
+lazy-object-proxy==1.9.0
+lib-pybroker==1.2.5
 libclang==18.1.1
+limits==3.6.0
+linkify-it-py==2.0.2
+llvmlite==0.43.0
+lockfile==0.12.2
 lxml==5.3.0
+Mako==1.2.4
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.20.1
+marshmallow-oneofschema==3.0.1
+marshmallow-sqlalchemy==0.26.1
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
+mdit-py-plugins==0.4.0
 mdurl==0.1.2
+methodtools==0.4.7
+mini-racer==0.12.4
 ml-dtypes==0.4.1
+mmh3==5.0.1
+monotonic==1.6
+more-itertools==10.5.0
+MouseInfo==0.1.3
 mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.0.4
+multiprocess==0.70.16
 multitasking==0.0.11
+mypy-extensions==1.0.0
+mysql-connector-python==9.1.0
+mysqlclient==2.2.7
 namex==0.0.8
 narwhals==1.14.2
 nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.2.1
-numpy==2.0.2
+numba==0.60.0
+numpy==1.26.4
 oauthlib==3.2.2
+onnxruntime==1.20.1
 openpyxl==3.1.5
+opentelemetry-api==1.29.0
+opentelemetry-exporter-otlp==1.29.0
+opentelemetry-exporter-otlp-proto-common==1.29.0
+opentelemetry-exporter-otlp-proto-grpc==1.29.0
+opentelemetry-exporter-otlp-proto-http==1.29.0
+opentelemetry-instrumentation==0.50b0
+opentelemetry-instrumentation-asgi==0.50b0
+opentelemetry-instrumentation-fastapi==0.50b0
+opentelemetry-proto==1.29.0
+opentelemetry-sdk==1.29.0
+opentelemetry-semantic-conventions==0.50b0
+opentelemetry-util-http==0.50b0
 opt_einsum==3.4.0
 optree==0.13.0
+ordered-set==4.1.0
+orjson==3.10.12
+osmnx==2.0.1
 outcome==1.3.0.post0
+overrides==7.7.0
 packaging==24.1
 pandas==2.2.3
+pandas-bokeh==0.5.5
+pandas-flavor==0.6.0
 parso==0.8.4
+pathspec==0.11.2
 patsy==0.5.6
 peewee==3.17.6
 pefile==2023.2.7
+peft==0.14.0
+pendulum==2.1.2
+pikepdf==9.5.1
 pillow==10.4.0
+pingouin==0.5.5
 platformdirs==4.3.6
 plotly==5.24.1
+pluggy==1.5.0
+posthog==3.8.3
+premailer==3.10.0
+prison==0.2.1
+progressbar2==4.5.0
 prompt_toolkit==3.0.48
+propcache==0.2.1
 protobuf==5.28.3
 psutil==6.0.0
 pure_eval==0.2.3
+py4j==0.10.9.7
 pyarrow==18.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+PyAutoGUI==0.9.54
 pycparser==2.22
+pydantic==2.10.6
+pydantic-settings==2.6.1
+pydantic_core==2.27.2
 pydeck==0.9.1
+PyGetWindow==0.0.9
 Pygments==2.18.0
 pyinstaller==6.11.1
 pyinstaller-hooks-contrib==2024.10
+PyJWT==2.8.0
+PyMsgBox==1.0.9
+pyogrio==0.10.0
 pyparsing==3.1.4
+pyperclip==1.9.0
+PyPika==0.48.9
+pyproj==3.7.0
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
+PyRect==0.2.0
+PyScreeze==1.0.1
 PySocks==1.7.1
+pyspark==3.5.3
+pyspellchecker==0.8.1
+pythainlp==5.0.4
+python-daemon==3.0.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-nvd3==0.15.0
+python-slugify==8.0.1
+python-utils==3.9.1
+pytweening==1.2.0
 pytz==2024.2
+pytzdata==2020.1
+pywin32==306
 pywin32-ctypes==0.2.3
 PyYAML==6.0.2
 pyzmq==26.2.0
 referencing==0.35.1
 regex==2024.11.6
 requests==2.32.3
+requests-futures==1.0.2
 requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
 retrying==1.3.4
+rfc3339-validator==0.1.4
+rfc3986==1.5.0
 rich==13.9.4
+rich-argparse==1.3.0
 rpds-py==0.20.0
 rsa==4.9
 safetensors==0.4.5
@@ -128,41 +311,85 @@ scratch==1.0.0
 seaborn==0.13.2
 selenium==4.26.1
 sentencepiece==0.2.0
+setproctitle==1.3.3
+shapely==2.0.6
+shellingham==1.5.4
+silpa_common==0.3
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 sortedcontainers==2.4.0
+soundex==1.1.3
 soupsieve==2.6
+spellchecker==0.4
+SQLAlchemy==1.4.49
+SQLAlchemy-JSONField==1.0.1.post0
+SQLAlchemy-Utils==0.41.1
+sqlparse==0.4.4
+sseclient-py==1.8.0
 stack-data==0.6.3
+starlette==0.41.3
 statsmodels==0.14.4
 streamlit==1.40.1
+streamlit-authenticator==0.4.1
 sympy==1.13.1
+tabulate==0.9.0
 tenacity==9.0.0
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
 tensorboard-plugin-wit==1.8.1
+tensorflow==2.18.0
+tensorflow-cpu==2.18.0
+tensorflow-estimator==2.11.0
+tensorflow-hub==0.16.1
+tensorflow-io-gcs-filesystem==0.31.0
+tensorflow-probability==0.16.0
+tensorflow_intel==2.18.0
 termcolor==2.5.0
+text-unidecode==1.3
 tf-estimator-nightly==2.8.0.dev2021122109
+tf-keras==2.15.0
 threadpoolctl==3.5.0
+time-machine==2.16.0
 tokenizers==0.20.3
 toml==0.10.2
+tomli==2.2.1
+torch==2.5.1+cu118
+torchaudio==2.5.1+cu118
+torchvision==0.20.1+cu118
 tornado==6.4.1
 tqdm==4.67.0
 traitlets==5.14.3
 transformers==4.46.2
 trio==0.27.0
 trio-websocket==0.11.1
+typer==0.15.1
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
+uc-micro-py==1.0.2
+unicodecsv==0.14.1
+universal_pathlib==0.2.6
 urllib3==2.2.3
+uvicorn==0.34.0
 watchdog==6.0.0
+watchfiles==1.0.4
 wcwidth==0.2.13
 webencodings==0.5.1
 websocket-client==1.8.0
+websockets==14.1
 Werkzeug==3.0.6
 widgetsnbextension==4.0.13
+wirerope==1.0.0
 wrapt==1.16.0
 wsproto==1.2.0
+WTForms==3.0.1
+xarray==2024.11.0
 xlrd==2.0.1
+xxhash==3.5.0
+xyzservices==2024.9.0
+yagmail==0.15.293
+yahooquery==2.3.7
+yarl==1.9.2
 yfinance==0.2.44
 zipp==3.21.0
