--- a/FindDistance/requirements.txt
+++ b/FindDistance/requirements.txt
@@ -100,7 +100,6 @@ Flask-Session==0.5.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.2.1
 flatbuffers==24.3.25
-folium==0.19.4
 fonttools==4.54.1
 frozendict==2.4.4
 frozenlist==1.4.0
@@ -198,7 +197,6 @@ namex==0.0.8
 narwhals==1.14.2
 nbformat==5.10.4
 nest-asyncio==1.6.0
-networkx==3.2.1
 numba==0.60.0
 numpy==1.26.4
 oauthlib==3.2.2
@@ -220,7 +218,6 @@ opt_einsum==3.4.0
 optree==0.13.0
 ordered-set==4.1.0
 orjson==3.10.12
-osmnx==2.0.1
 outcome==1.3.0.post0
 overrides==7.7.0
 packaging==24.1
@@ -330,8 +327,6 @@ sseclient-py==1.8.0
 stack-data==0.6.3
 starlette==0.41.3
 statsmodels==0.14.4
-streamlit==1.40.1
-streamlit-authenticator==0.4.1
 sympy==1.13.1
 tabulate==0.9.0
 tenacity==9.0.0
@@ -393,3 +388,7 @@ yahooquery==2.3.7
 yarl==1.9.2
 yfinance==0.2.44
 zipp==3.21.0
+folium>=0.12.1
+osmnx>=1.1.1
+networkx>=2.5
+streamlit>=1.0.0
